# Novara-Engine

./: .gitignore  Build_Debug.bat  Build_Release.bat  CMakeLists.txt  CMakeSettings.json  CreateInstaller.bat  LICENSE  Novara_x64.sln  README.md
NovaraEngine/: CMakeLists.txt  NovaraAPI.h  NovaraEngine.vcxproj  NovaraEngine.vcxproj.filters  stdafx.h
NovaraEngine/Base/: Enumerations.h  GameStats.cpp  GameStats.h  GameTime.cpp  Logger.cpp  Logger.h  NovaraGame.cpp  NovaraGame.h  Structs.h
NovaraEngine/Components/: BaseComponent.cpp  BaseComponent.h  CameraComponent.cpp  CameraComponent.h  ControllerComponent.cpp  ControllerComponent.h  MeshDrawComponent.cpp  MeshDrawComponent.h  MeshIndexedDrawComponent.cpp  MeshIndexedDrawComponent.h  ModelComponent.cpp  ModelComponent.h  ParticleEmitterComponent.cpp  ParticleEmitterComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  SpriteComponent.CPP  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
NovaraEngine/Content/: SpriteFontLoader.cpp
NovaraEngine/Contents/: ContentLoader.h  EffectLoader.cpp  EffectLoader.h  MeshFilterLoader.CPP  MeshFilterLoader.h  PxMeshLoader.cpp  PxMeshLoader.h  SpriteFontLoader.cpp  SpriteFontLoader.h  TextureDataLoader.cpp  TextureDataLoader.h
NovaraEngine/Graphics/: DebugRenderer.cpp  DebugRenderer.h  ShadowMapRenderer.cpp  ShadowMapRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
NovaraEngine/Managers/: ContentManager.cpp  ContentManager.h  InputManager.cpp  InputManager.h  LightManager.cpp  LightManager.h  MaterialManager.cpp  MaterialManager.h  PhysXManager.cpp  PhysXManager.h  SceneManager.cpp  SceneManager.h  SoundManager.cpp  SoundManager.h
NovaraEngine/Misc/: BaseMaterial.cpp  BaseMaterial.h  Material.cpp  Material.h  MeshFilter.cpp  MeshFilter.h  ModelAnimator.cpp  ModelAnimator.h  ParticleMaterial.cpp  ParticleMaterial.h  PostProcessingMaterial.cpp  PostProcessingMaterial.h  RenderTarget.cpp  RenderTarget.h  ShadowMapMaterial.cpp  ShadowMapMaterial.h  SpriteFont.cpp  SpriteFont.h  TextureData.cpp  TextureData.h
NovaraEngine/PCH/: EnginePCH.h
NovaraEngine/PhysX/: NovaraSimulationFilterShader.h  PhysxAllocator.h  PhysxErrorCallback.cpp  PhysxErrorCallback.h  PhysxProxy.cpp  PhysxProxy.h
NovaraEngine/Prefabs/: FixedCamera.cpp  FixedCamera.h  FreeCamera.cpp  FreeCamera.h
NovaraEngine/Scenegraph/: GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h
NovaraEngine/Utils/: BinaryReader.cpp  BinaryReader.h  EffectHelper.cpp  EffectHelper.h  ImguiHelper.cpp  ImguiHelper.h  Macros.h  MathHelper.H  PhysxHelper.cpp  PhysxHelper.h  Singleton.h  Utils.h  VertexHelper.cpp  VertexHelper.h
NovaraEngine/_build/Debug/: NovaraEngine.idb
NovaraProject/: CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  Main.cpp  MainGame.cpp  MainGame.h  MinionScene.cpp  NovaraProject.vcxproj  pch.h  stdafx.h
NovaraProject/Materials/: ColorMaterial.cpp  ColorMaterial.h
NovaraProject/Prefabs/: CubePrefab.cpp  CubePrefab.h  SpherePrefab.cpp  SpherePrefab.h  TorusPrefab.cpp  TorusPrefab.h
NovaraProject/Resources/Effects/: DebugRenderer.fx  SpriteRenderer.fx  TextRenderer.fx
NovaraProject/Scenes/: MinionScene.cpp  MinionScene.h  Pong.cpp  Pong.h  PongScene.cpp  PongScene.h
